--- a/norabelocu.html
+++ b/norabelocu.html
@@ -90,7 +90,7 @@
       <div class="mensagem" id="mensagem-2" style="display: none;">
         <h2>Benício</h2>
         <h4>13:34 - 12/07/2019</h4>
-        <p>Oi Nora, só queria dizer que independente do que tiver acontecido, você não tem culpa da doença que chegou na ilha.</p>
+        <p>Oi Nora, só queria dizer que independente do que tiver acontecido, você não tem culpa da doença que chegou na ilha minha e do Fer.</p>
       </div>
       <div class="mensagem" id="mensagem-3" style="display: none;">
         <h2>Fernando</h2>
