--- a/fernandocom.html
+++ b/fernandocom.html
@@ -71,7 +71,7 @@
 
 <p>Nossa última comunicação foi no dia da chegada dele à área. O sinal na região é fraco, e isso pode ser apenas um problema técnico — algo comum em áreas mais isoladas. Ainda assim, novas informações vieram à tona nos últimos dias, sugerindo que a situação pode estar se agravando.</p>
 
-<p>É pedir isso, mas preciso da ajuda de vocês.</p>
+<p>É difícil pedir isso, mas preciso da ajuda de vocês.</p>
 
 <p>Benício, Fernando e Norabel — confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
 <br>
