--- a/fernandocom.html
+++ b/fernandocom.html
@@ -37,9 +37,9 @@
 
 <p>Nas últimas semanas, animais aqui da região começaram a agir de forma estranha. Cães que sempre foram dóceis estão agitados, latindo para o vazio à noite. Gado desaparecendo. Pássaros voando em círculos por horas, como se estivessem desorientados.</p>
 
-<p>Além disso, começaram a aparecer pessoas que ninguém aqui conhece — sempre usando roupas parecidas, meio formais, meio antigas. Algumas têm tatuagens nos braços, todas muito parecidas, como símbolos ou marcas tribais. Eles não falam com ninguém e só são vistos à noite, às vezes caminhando perto do lago.</p>
+<p>Além disso, começaram a aparecer pessoas que ninguém aqui conhece, sempre usando roupas parecidas, meio formais, meio antigas. Algumas têm tatuagens nos braços, todas muito parecidas, como símbolos ou marcas tribais. Eles não falam com ninguém e só são vistos à noite, às vezes caminhando perto do lago.</p>
 
-<p>Pescadores dizem que viram “algo grande” dentro da água. Não peixe. Algo que se move devagar, que parece observar. Um senhor disse ter escutado uma voz vindo do lago, mas ele tem bebido, então ninguém deu atenção.</p>
+<p>Pescadores dizem que viram coisas água. Não peixe. Algo que se move devagar, que parece observar. Um senhor disse ter escutado uma voz vindo do lago, mas ele tem bebido, então ninguém deu atenção.</p>
 
 <p>Só sei que a sensação aqui está ficando pesada. Gente ficando doente do nada, sumiços pequenos, mas constantes.</p>
 
@@ -73,7 +73,7 @@
 
 <p>É difícil pedir isso, mas preciso da ajuda de vocês.</p>
 
-<p>Benício, Fernando e Norabel — confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
+<p>Benício, Fernando e Norabel, confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
 <br>
 <p><strong>Informações da missão:</strong></p>
 <p>O local em questão é uma pequena comunidade com menos de 70 habitantes, situada às margens de um lago no interior de Minas Gerais. Outrora um ponto turístico movimentado, hoje a região está praticamente esquecida, recebendo poucos visitantes e mantendo-se isolada.</p>
