--- a/enviar.html
+++ b/enviar.html
@@ -18,7 +18,7 @@
 
     <!-- Campo oculto para título ou identificação -->
     <input type="hidden" name="_subject" value="Nova mensagem do RPG!">
-    <input type="hidden" name="_next" value="https://ordo.vercel.app/index.html">
+    <input type="hidden" name="_next" value="https://ordo-beta.vercel.app/index.html">
     <label for="destinatario">Para:</label>
     <select name="Destinatário" id="destinatario" required>
       <option value="" disabled selected>Escolha um personagem</option>
