--- a/norabelocu.html
+++ b/norabelocu.html
@@ -15,18 +15,23 @@
   <div class="container">
     <aside class="mensagens-lista">
       <ul>
-        <li class="important" onclick="mostrarMensagem(0)">M</li>
+        <!--<button onclick="window.location.href = 'nuntiumn.html'"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></button>
+        --><li class="important" onclick="mostrarMensagem(2)">M</li>
         <li class="important" onclick="mostrarMensagem(1)">M</li>
-        <li onclick="mostrarMensagem(2)">Benicio</li>
-        <li onclick="mostrarMensagem(3)">Fernando</li>
-        <li onclick="mostrarMensagem(4)">Fernando</li>
-        <li onclick="mostrarMensagem(5)">Fernando</li>
-        <li onclick="mostrarMensagem(6)">Fernando</li>
+        <li class="important" onclick="mostrarMensagem(0)">M</li>
       </ul>
     </aside>
 
     <main class="mensagem-detalhe">
-      <div class="mensagem" id="mensagem-0">
+            <div class="mensagem" id="mensagem-0">
+        <h2>M.</h2>
+        <h4>23:30 - 21/07/2019</h4>
+        <h3>Recording.wav</h3>
+        <br>
+        <br>
+        <p>Ac9Ej2I9N/</p>
+      </div>
+      <div class="mensagem" id="mensagem-1" style="display: none;">
         <h2>M.</h2>
         <h4>23:30 - 21/07/2019</h4>
         <h3>Email citado - Leia a outra mensagem antes.</h3>
@@ -37,13 +42,13 @@
 
 <p>Olá, pessoal do <em>Além da Membrana</em>!</p>
 
-<p>Meu nome é Rogério, sou morador aqui de <strong>[REDACTED]</strong>, uma comunidade pequena perto de um lago no interior de Minas. Sei que o que vou dizer pode parecer maluquice, mas espero que alguém aí leve a sério.</p>
+<p>Meu nome é Rogério, sou morador aqui de <strong>[REDACTED]</strong>, uma comunidade pequena perto de um lago no interior de [REDACTED]. Sei que o que vou dizer pode parecer maluquice, mas espero que alguém aí leve a sério.</p>
 
 <p>Nas últimas semanas, animais aqui da região começaram a agir de forma estranha. Cães que sempre foram dóceis estão agitados, latindo para o vazio à noite. Gado desaparecendo. Pássaros voando em círculos por horas, como se estivessem desorientados.</p>
 
 <p>Além disso, começaram a aparecer pessoas que ninguém aqui conhece — sempre usando roupas parecidas, meio formais, meio antigas. Algumas têm tatuagens nos braços, todas muito parecidas, como símbolos ou marcas tribais. Eles não falam com ninguém e só são vistos à noite, às vezes caminhando perto do lago.</p>
 
-<p>Pescadores dizem que viram coisas água. Não peixe. Algo que se move devagar, que parece observar. Um senhor disse ter escutado uma voz vindo do lago, mas ele tem bebido, então ninguém deu atenção.</p>
+<p>Pescadores dizem que viram “algo grande” dentro da água. Não peixe. Algo que se move devagar, que parece observar. Um senhor disse ter escutado uma voz vindo do lago, mas ele tem bebido, então ninguém deu atenção.</p>
 
 <p>Só sei que a sensação aqui está ficando pesada. Gente ficando doente do nada, sumiços pequenos, mas constantes.</p>
 
@@ -62,7 +67,7 @@
 <p>Enfim, sei que posso contar com vocês. Se preparem, e assim que tiver tudo pronto eu entro em contato novamente. Também vou providenciar de mandar o único aúdio mandado por Jonatan, pode ser útil de alguma forma.</p>
 
       </div>
-      <div class="mensagem" id="mensagem-1" style="display: none;">
+      <div class="mensagem" id="mensagem-2" style="display: none;">
         <h2>M.</h2>
         <h4>23:30 - 21/07/2019</h4>
         <h3>Para Benício, Fernando e Norabel.</h3>
@@ -75,42 +80,18 @@
 
 <p>Nossa última comunicação foi no dia da chegada dele à área. O sinal na região é fraco, e isso pode ser apenas um problema técnico — algo comum em áreas mais isoladas. Ainda assim, novas informações vieram à tona nos últimos dias, sugerindo que a situação pode estar se agravando.</p>
 
-<p>É difícil pedir isso, mas preciso da ajuda de vocês.</p>
+<p>É pedir isso, mas preciso da ajuda de vocês.</p>
 
-<p>Benício, Fernando e Norabel, confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
+<p>Benício, Fernando e Norabel — confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
 <br>
 <p><strong>Informações da missão:</strong></p>
-<p>O local em questão é uma pequena comunidade com menos de 70 habitantes, situada às margens de um lago no interior de Minas Gerais. Outrora um ponto turístico movimentado, hoje a região está praticamente esquecida, recebendo poucos visitantes e mantendo-se isolada.</p>
+<p>O local em questão é uma pequena comunidade com menos de 70 habitantes, situada às margens de um lago no interior de [REDACTED]. Outrora um ponto turístico movimentado, hoje a região está praticamente esquecida, recebendo poucos visitantes e mantendo-se isolada.</p>
 
 <p>Cuidarei de todo o transporte, hospedagem e dos recursos necessários para a missão. Quero que estejam prontos para partir assim que eu der o sinal.</p>
 
 <p>A seguir, transcrevo o conteúdo da mensagem que nos alertou para o caso. Foi enviada para nosso podcast fictício, Além da Membrana, usado como fachada para atrair e filtrar relatos paranormais.</p>
 
 </div>
-      <div class="mensagem" id="mensagem-2" style="display: none;">
-        <h2>Benício</h2>
-        <h4>13:34 - 12/07/2019</h4>
-        <p>Oi Nora, só queria dizer que independente do que tiver acontecido, você não tem culpa da doença que chegou na ilha minha e do Fer.</p>
-      </div>
-      <div class="mensagem" id="mensagem-3" style="display: none;">
-        <h2>Fernando</h2>
-        <h4>10:43 - 11/07/2019</h4>
-        <p>bom dia</p>
-      </div>
-      <div class="mensagem" id="mensagem-4" style="display: none;">
-        <h2>Fernando</h2>
-        <h4>10:24 - 09/07/2019</h4>
-        <p>bom dia</p>
-      </div>
-      <div class="mensagem" id="mensagem-5" style="display: none;">
-        <h2>Fernando</h2>
-        <h4>09:21 - 08/07/2019</h4>
-        <p>dia</p>
-      </div>
-      <div class="mensagem" id="mensagem-6" style="display: none;">
-        <h2>Fernando</h2>
-        <h4>09:20 - 08/07/2019</h4>
-        <p>oi bo dia</p>
     </main>
   </div>
 
