--- a/benicioesp.html
+++ b/benicioesp.html
@@ -97,7 +97,7 @@
         <h2>Norabel</h2>
         <br>
         <br>
-        <p>/me manda um atestado por favor quero sair amanha</p>
+        <p>me manda um atestado por favor quero sair amanha</p>
     </main>
   </div>
 
