--- a/benicioesp.html
+++ b/benicioesp.html
@@ -93,7 +93,7 @@
 <p>A seguir, transcrevo o conteúdo da mensagem que nos alertou para o caso. Foi enviada para nosso podcast fictício, Além da Membrana, usado como fachada para atrair e filtrar relatos paranormais.</p>
 
       </div>
-      <div class="mensagem" id="mensagem-3">
+      <div class="mensagem" id="mensagem-3" style="display: none;">
         <h2>Norabel</h2>
         <br>
         <br>
