--- a/benicioesp.html
+++ b/benicioesp.html
@@ -1,113 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Caixa de Mensagens - Benicio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Caixa de Mensagens - Benício</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js';
+        import { getDatabase, ref, get, onValue } from 'https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js';
+
+        // Sua configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyAxt_asU8l5ArCNugThPWQfTUBL2TP8_RY",
+            authDomain: "mensagens-dbf03.firebaseapp.com",
+            databaseURL: "https://mensagens-dbf03-default-rtdb.firebaseio.com",
+            projectId: "mensagens-dbf03",
+            storageBucket: "mensagens-dbf03.firebasestorage.app",
+            messagingSenderId: "862531491101",
+            appId: "1:862531491101:web:d18af93139432e222d7df4"
+        };
+
+        // Inicializando o Firebase
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+
+        // Restante do seu código dentro do bloco de script do módulo
+        const mensagensRef = ref(database, "mensagens/benicio");
+
+        // Obtendo as mensagens do Firebase
+        get(mensagensRef).then((snapshot) => {
+            if (snapshot.exists()) {
+                const mensagens = snapshot.val();
+                const lista = document.getElementById("listaMensagens");
+                const conteudo = document.getElementById("conteudoMensagem");
+
+                Object.keys(mensagens).forEach((key, i) => {
+                    const msg = mensagens[key];
+                    const li = document.createElement("li");
+                    li.textContent = msg.titulo || "Sem título";
+                    li.onclick = () => mostrarMensagem(i, mensagens);
+                    lista.appendChild(li);
+                });
+
+                function mostrarMensagem(i, mensagens) {
+                    const msg = Object.values(mensagens)[i];
+                    conteudo.innerHTML = `
+                        <h2>${msg.titulo}</h2>
+                        <p>${msg.conteudo}</p>
+                    `;
+                    conteudo.style.display = "block";
+                }
+            } else {
+                console.log("Nenhuma mensagem encontrada");
+            }
+        }).catch((error) => {
+            console.error("Erro ao obter dados do Firebase:", error);
+        });
+    </script>
 </head>
 <body>
-  <header>
-    <img src="logo.png" style="filter: invert(100%);">
-    <h1>Bem vindo de volta, <span id="benicio">Benício</span>.</h1>
-  </header>
+    <header>
+        <img src="logo.png" style="filter: invert(100%);">
+        <h1>Bem-vindo de volta, <span id="benicio">Benício</span>.</h1>
+    </header>
 
-  <div class="container">
-    <aside class="mensagens-lista">
-      <ul>
-        <button onclick="window.location.href = 'nuntiumb.html'"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></button>
-        <li onclick="mostrarMensagem(3)">Norabel</li>
-        <li onclick="mostrarMensagem(2)">M</li>
-        <li onclick="mostrarMensagem(1)">M</li>
-        <li onclick="mostrarMensagem(0)">M</li>
-      </ul>
-    </aside>
+    <div class="container">
+        <aside>
+            <button onclick="window.location.href = 'nuntiumb.html'"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/>
+              </svg>
+            </button>
+            <ul id="listaMensagens">
+            </ul>
+        </aside>
 
-    <main class="mensagem-detalhe">
-      <div class="mensagem" id="mensagem-2">
-        <h2>M.</h2>
-        <h4>23:30 - 21/07/2019</h4>
-        <h3>Recording.wav</h3>
-        <br>
-        <br>
-        <p>/1oQaVtmFxZ99</p>
-      </div>
-      <div class="mensagem" id="mensagem-1" style="display: none;">
-        <h2>M.</h2>
-        <h4>23:30 - 21/07/2019</h4>
-        <h3>Email citado - Leia a outra mensagem antes.</h3>
-        <br>
-        <br>
-        <p>"De: rogerio.santos@gmail.com</p>
-<h5>Assunto: Relato para o podcast</h5>
-
-<p>Olá, pessoal do <em>Além da Membrana</em>!</p>
-
-<p>Meu nome é Rogério, sou morador aqui de <strong>[REDACTED]</strong>, uma comunidade pequena perto de um lago no interior de [REDACTED]. Sei que o que vou dizer pode parecer maluquice, mas espero que alguém aí leve a sério.</p>
-
-<p>Nas últimas semanas, animais aqui da região começaram a agir de forma estranha. Cães que sempre foram dóceis estão agitados, latindo para o vazio à noite. Gado desaparecendo. Pássaros voando em círculos por horas, como se estivessem desorientados.</p>
-
-<p>Além disso, começaram a aparecer pessoas que ninguém aqui conhece — sempre usando roupas parecidas, meio formais, meio antigas. Algumas têm tatuagens nos braços, todas muito parecidas, como símbolos ou marcas tribais. Eles não falam com ninguém e só são vistos à noite, às vezes caminhando perto do lago.</p>
-
-<p>Pescadores dizem que viram “algo grande” dentro da água. Não peixe. Algo que se move devagar, que parece observar. Um senhor disse ter escutado uma voz vindo do lago, mas ele tem bebido, então ninguém deu atenção.</p>
-
-<p>Só sei que a sensação aqui está ficando pesada. Gente ficando doente do nada, sumiços pequenos, mas constantes.</p>
-
-<p>E agora... teve uma coisa que não dá pra ignorar.</p>
-
-<p>Na semana passada, encontraram o corpo da <strong>[REDACTED]</strong>, uma moça daqui, dentro do lago. A polícia já encerrou o caso como suicídio — ela teria se jogado durante a madrugada. Mas quem conhecia a <strong>[REDACTED]</strong> sabe que isso não faz sentido. Ela nunca demonstrou nenhum sinal de nada parecido.</p>
-
-<p>Alguma coisa muito errada está acontecendo aqui.</p>
-
-<p>Enfim, obrigado por escutarem.</p>
-
-<p>– Rogério"</p>
-
-<br>
-
-<p>Enfim, sei que posso contar com vocês. Se preparem, e assim que tiver tudo pronto eu entro em contato novamente. Também vou providenciar de mandar o único aúdio mandado por Jonatan, pode ser útil de alguma forma.</p>
-
-      </div>
-      <div class="mensagem" id="mensagem-2" style="display: none;">
-        <h2>M.</h2>
-        <h4>23:30 - 21/07/2019</h4>
-        <h3>Para Benício, Fernando e Norabel.</h3>
-
-<p>Recentemente, um dos nossos canais de detecção de anomalias na membrana captou uma mensagem incomum. O sinal não era forte, mas suficiente para chamar atenção do nosso algoritmo.</p>
-
-<p>Enviei um agente ao local para investigação preliminar. Não era um dos nossos mais experientes em combate, mas sim alguém com grande capacidade analítica: Jonatan Sins. Ele é um excelente investigador, meticuloso e atento aos padrões. Não havia indícios claros de risco na região, por isso autorizei que ele fosse sozinho, com a instrução de me manter informado a cada avanço.</p>
-
-<p>No entanto, não recebo notícias dele há dias.</p>
-
-<p>Nossa última comunicação foi no dia da chegada dele à área. O sinal na região é fraco, e isso pode ser apenas um problema técnico — algo comum em áreas mais isoladas. Ainda assim, novas informações vieram à tona nos últimos dias, sugerindo que a situação pode estar se agravando.</p>
-
-<p>É pedir isso, mas preciso da ajuda de vocês.</p>
-
-<p>Benício, Fernando e Norabel — confio em vocês três mais do que em qualquer outra equipe no momento. Não acredito que encontrarão algo pior do que o que enfrentaram naquela ilha, mas ainda assim, mantenham-se atentos.</p>
-<br>
-<p><strong>Informações da missão:</strong></p>
-<p>O local em questão é uma pequena comunidade com menos de 70 habitantes, situada às margens de um lago no interior de [REDACTED]. Outrora um ponto turístico movimentado, hoje a região está praticamente esquecida, recebendo poucos visitantes e mantendo-se isolada.</p>
-
-<p>Cuidarei de todo o transporte, hospedagem e dos recursos necessários para a missão. Quero que estejam prontos para partir assim que eu der o sinal.</p>
-
-<p>A seguir, transcrevo o conteúdo da mensagem que nos alertou para o caso. Foi enviada para nosso podcast fictício, Além da Membrana, usado como fachada para atrair e filtrar relatos paranormais.</p>
-
-      </div>
-      <div class="mensagem" id="mensagem-3" style="display: none;">
-        <h2>Norabel</h2>
-        <br>
-        <br>
-        <p>me manda um atestado por favor quero sair amanha</p>
-    </main>
-  </div>
-
-  <script>
-    function mostrarMensagem(index) {
-      const mensagens = document.querySelectorAll('.mensagem');
-      mensagens.forEach((msg, i) => {
-        msg.style.display = i === index ? 'block' : 'none';
-      });
-    }
-  </script>
+        <main>
+            <div id="conteudoMensagem" class="mensagem"></div>
+        </main>
+    </div>
 </body>
 </html>
