--- a/nuntiumb.html
+++ b/nuntiumb.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Nuntium</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Enviar Mensagem</title>
   <link rel="stylesheet" href="stylesend.css">
-  <style>
-    body { font-family: sans-serif; padding: 2rem; }
-    form { max-width: 400px; margin: auto; display: flex; flex-direction: column; gap: 1rem; }
-    textarea, select, button { font-size: 1rem; padding: 0.5rem;}
-    .mensagem-sucesso {
-      display: none;
-      color: white;
-      text-align: center;
-      margin-top: 2rem;
-      font-family: 'Courier New', Courier, monospace;
-    }
-  </style>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <img src="logo.png" style="filter: invert(100%);">
-  <form id="formulario">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_subject" value="Nova mensagem do RPG!">
-
-    <label for="destinatario">Ad recipiendum</label>
-    <select name="Destinatário" id="destinatario" required>
-      <option value="" disabled selected></option>
-      <option value="???">???</option>
-      <option value="M">M</option>
-      <option value="Fernando">Fernando</option>
-      <option value="Norabel">Norabel</option>
-      <option value="Samuel">Samuel</option>
-      <option value="Walter">Walter</option>
+  <form id="formMensagem">
+    <label for="destinatario">Ad quem</label>
+    <select id="destinatario">
+      <option value="lecio">???</option>
+      <option value="fernando">Fernando</option>
+      <option value="norabel">Norabel</option>
+      <option value="samuel">Samuel</option>
+      <option value="walter">Walter</option>
     </select>
 
     <label for="mensagem">Nuntium</label>
-    <textarea name="Mensagem" id="mensagem" rows="5" required placeholder=""></textarea>
-
+    <textarea id="mensagem" rows="6"></textarea>
     <button type="submit">Mitte</button>
   </form>
 
-  <div class="mensagem-sucesso" id="mensagem-sucesso">Successu.</div>
-
   <script>
-    const form = document.getElementById('formulario');
-    const sucesso = document.getElementById('mensagem-sucesso');
+    // 1. Configuração Firebase (substitua pelos seus dados)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAxt_asU8l5ArCNugThPWQfTUBL2TP8_RY",
+  authDomain: "mensagens-dbf03.firebaseapp.com",
+  databaseURL: "https://mensagens-dbf03-default-rtdb.firebaseio.com",
+  projectId: "mensagens-dbf03",
+  storageBucket: "mensagens-dbf03.firebasestorage.app",
+  messagingSenderId: "862531491101",
+  appId: "1:862531491101:web:d18af93139432e222d7df4",
+  measurementId: "G-NK739HQHD6"
+    };
 
-    form.addEventListener('submit', async (e) => {
+    // 2. Inicializar Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
+    // 3. Submissão do formulário
+    document.getElementById("formMensagem").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const dados = new FormData(form);
-      dados.append('_captcha', 'false');
-      dados.append('_subject', 'Nova mensagem do Benicio!');
-      
-      try {
-        const resposta = await fetch('https://formsubmit.co/ajax/ordorealitas1935@gmail.com', {
-          method: 'POST',
-          body: dados,
-        });
+      const destinatario = document.getElementById("destinatario").value;
+      const texto = document.getElementById("mensagem").value;
 
-        if (resposta.ok) {
-          form.reset();
-          sucesso.style.display = 'block';
-        } else {
-          alert('Error.');
-        }
-      } catch (erro) {
-        alert('Error.');
-      }
+      if (!texto.trim()) return alert("Escreva uma mensagem.");
+
+      const novaMensagem = {
+        titulo: "Benício", 
+        conteudo: texto,
+        timestamp: Date.now()
+      };
+
+      // 4. Salvar no Firebase na pasta correspondente ao destinatário
+      db.ref(`mensagens/${destinatario}`).push(novaMensagem)
+        .then(() => {
+          alert("Mensagem enviada!");
+          document.getElementById("formMensagem").reset();
+        })
+        .catch((error) => {
+          console.error("Erro ao enviar:", error);
+          alert("Erro ao enviar mensagem.");
+        });
     });
   </script>
 </body>
